--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
     chatgpt_telegram_bot:
       container_name: chatgpt_telegram_bot
-      image: cr.yandex/crpuhgkma7bt3sgtml2k/ver2:latest
+      image: ver2:latest
       command: python3 bot/bot.py
       restart: always
       depends_on:
