--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,12 @@
-version: '3.4'
-
+version: '3.7'
 services:
-  mongo_service:
-    container_name: mongo
+  app1:
+    container_name: nginx
+    image: "nginx"
+    ports:
+      - "80:80"
     restart: always
-    image: mongo:latest
+  app2:
+    container_name: redis
+    image: "redis"
+    restart: always
