--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,28 @@
-version: '3.7'
+version: '3.4'
+
+networks:
+  webhookserver-net:
+    driver: bridge
+    driver_opts:
+      com.docker.network.driver.mtu: 1500
+
 services:
-  app1:
-    container_name: nginx
-    image: "nginx"
+  whatsapp_api_webhook_server_python:
+    hostname: webhookserver
+    container_name: webhookserver
+    restart: unless-stopped
+    image: greenapi/whatsapp-api-webhook-server-python:latest
     ports:
-      - "80:80"
-    restart: always
-  app2:
-    container_name: redis
-    image: "redis"
-    restart: always
+      - "8080:80"
+    healthcheck:
+      test: curl -sS http://127.0.0.1:80 || exit 1
+      interval: 5s
+      timeout: 10s
+      retries: 3
+    networks:
+      - "webhookserver-net"
+    logging:
+      driver: "json-file"
+      options:
+        max-file: "14"
+        max-size: "10m"
